[b][color=orange]v3.40[/color], 14.09.2018[/b][list]
[*]Code updates to NamePlate Auras.
[*]Added WarScrolls to the RaidBuffs.
[*]Update ProjectAzilroka compatibily.
[*]Added back DBM skin. I only touch the Range/Info Frame.
[*]Fixed an error in the RaidUI skin.
[*]Added back the install steps for the AddOns.
[*]A lot of skin updates.[/list]

[b][color=orange]v3.39[/color], 08.09.2018[/b][list]
[*]Remove the BenikUI incompatibility checks. Sorry for this.
[*]Fixed an error in Enhanced Namplateaura if the Player NamePlate was enabled. #27
[*]Comment out the DBM skin for now (again). Will work on it more.
[*]Some new skinning function for the MailFrame Checkboxes.[/list]

[b][color=orange]v3.38[/color], 07.09.2018[/b][list]
[*]Some major code improvements by Whiro. Thanks for this:
   -> Compatibily with other Plugins/AddOns
      Some modules from me or other Plugins/AddOns gets disabled if there is any incompatibility.
      If this happens the first time, there will be a print in the chat.
   -> Add db conversations if updating/switching/delete profiles. So my modules take account to this.
[*]Updated BigWigs profile and add a BigWigs Heal Profile.
[*]Some skin updates.[/list]


[b][color=orange]v3.37[/color], 03.09.2018[/b][list]
[*]Added a split bag feature. Which allows you to split the All In One Bag. Credits: SMRTL
[*]Updated ProjectAzilroka profile.
[*]Fixed an error in my DataText options. No one have discovered it yet. :>
[*]Added an compatibily feature. My modules will gets disabled if a specific
   AddOn is Loaded. Many thanks to Whiro.
[*]Added a second layout to my install => Heal Layout. Needs feedback!![/list]

[b][color=orange]v3.36[/color], 31.08.2018[/b][list]
[*]Register my modules to an own function.
[*]You are now able, to change the most of my stuff to use the Value Color from ElvUI.
   No more forced to use ClassColor (if you don't want to).
[*]Overhaul my complete Options.