@@ -1,3 +1,10 @@
+** v3.41, 18.09.2018**
+* Added a check for the ScrappingMachine if the ElvUI bags are disabled.
+* Adjust a bit the ArenaFrame position.
+* Maybe a fix for a nil error on vignetteInfo.
+* More NPCs on my GameMenu. ;)
+* A lot skin updates.
+
 ** v3.40, 14.09.2018**
 * Code updates to NamePlate Auras.
 * Added WarScrolls to the RaidBuffs.
